Fix visibility on queue window

--- a/src/Stylesheets/QueueWindow.css
+++ b/src/Stylesheets/QueueWindow.css
@@ -10,8 +10,9 @@
   backdrop-filter: blur(1.5px);
   border-right: 1px solid rgba(222, 222, 222, 0.7);
   transform: translate(-500px);
+  visibility: hidden;
   transition: all 1s;
-  transition-property: transform, opacity;
+  transition-property: transform, visibility;
 }
 
 .queue-bg {
@@ -28,11 +29,11 @@
   visibility: visible;
 }
 
-.queue-header {
-  padding-top: 15px;
+.queue-window.active {
+  visibility: visible;
+  transform: translate(0);
 }
 
-.queue-window.active {
-  opacity: 1;
-  transform: translate(0);
+.queue-header {
+  padding-top: 15px;
 }
